add for making serializable

--- a/CSLibraryFullFrameWork/ClassLibraryFullTest/ClassLibraryFullTest.csproj
+++ b/CSLibraryFullFrameWork/ClassLibraryFullTest/ClassLibraryFullTest.csproj
@@ -50,8 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="GridTest.cs" />
+    <Compile Include="GameDescriptionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="OtherTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibraryFull\ClassLibraryFull_CS.csproj">
