--- a/CSLibraryFullFrameWork/ClassLibraryFull/ClassLibraryFull_CS.csproj
+++ b/CSLibraryFullFrameWork/ClassLibraryFull/ClassLibraryFull_CS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="GameGrid.cs" />
     <Compile Include="GridPosition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavedGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
