--- a/CSLibraryFullFrameWork/ClassLibraryFullTest/CS_GOL_Core_LibraryFullTest.csproj
+++ b/CSLibraryFullFrameWork/ClassLibraryFullTest/CS_GOL_Core_LibraryFullTest.csproj
@@ -55,9 +55,9 @@
     <Compile Include="OtherTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibraryFull\ClassLibraryFull_CS.csproj">
+    <ProjectReference Include="..\ClassLibraryFull\CS_GOL_Core_LibraryFull.csproj">
       <Project>{dfe570b8-451c-459b-8d4e-c9fc225a4047}</Project>
-      <Name>ClassLibraryFull_CS</Name>
+      <Name>CS_GOL_Core_LibraryFull</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
