--- a/CSLibraryFullFrameWork/WebApplication1/GOLWebApplicationUI.csproj
+++ b/CSLibraryFullFrameWork/WebApplication1/GOLWebApplicationUI.csproj
@@ -58,8 +58,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GameUI.aspx" />
-    <Content Include="GOL_HtmlJavascript.html" />
-    <Content Include="GOL_JavaScript.js" />
     <Content Include="Index.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -74,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -87,6 +86,7 @@
       <Name>CS_GOL_Core_LibraryFull</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
