--- a/CSLibraryFullFrameWork/WebApplication1/GOLWebApplicationUI.csproj
+++ b/CSLibraryFullFrameWork/WebApplication1/GOLWebApplicationUI.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GameUI.aspx" />
-    <Content Include="Index.aspx" />
+    <Content Include="Default.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
